--- a/src/app/open/open.component.html
+++ b/src/app/open/open.component.html
@@ -22,7 +22,7 @@
                     <h1><span class="bi bi-cloud"></span> Load from URL</h1>
                     <div class="row">
                         <div class="col-sm-9 input-group">
-                            <input class="form-control" name="remote_url" type="text" [(ngModel)]="remoteUrl" placeholder="http://example.com/dashboard.json" />
+                            <input class="form-control" name="remote_url" type="text" [(ngModel)]="remoteUrl" placeholder="http://example.com/rules.json" />
                             <button class="btn btn-outline-dark" (click)="loadRemoteUrl()">Load it!</button>
                         </div>
                         <div class="col-sm-12"><i>Works "inside the firewall"!</i></div>
