--- a/src/app/rule/rule.component.scss
+++ b/src/app/rule/rule.component.scss
@@ -5,6 +5,10 @@
         background-color: rgba(247, 249, 185, 0.9);
         box-shadow: 0px 0px px rgba(246, 255, 0, 0.9);
     }
+
+    textarea {
+        height: 100px;
+    }
     ul {
         margin: 0;
         padding: 0;
