--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -54,14 +54,14 @@
                                                     (click)="moveUp(r, rules_file.rules)"
                                                     *ngIf="canMoveUp(r, rules_file.rules)"><span
                                                         class="bi bi-chevron-up"></span></a>
-                                                <a class="btn btn-small btn-dark-outline disabled"
+                                                <a class="btn btn-small btn-dark disabled"
                                                     *ngIf="!canMoveUp(r, rules_file.rules)"><span
                                                         class="bi bi-chevron-up"></span></a>
                                                 <a class="btn btn-small btn-dark-outline"
                                                     (click)="moveDown(r, rules_file.rules)"
                                                     *ngIf="canMoveDown(r, rules_file.rules)"><span
                                                         class="bi bi-chevron-down"></span></a>
-                                                <a class="btn btn-small btn-dark-outline disabled"
+                                                <a class="btn btn-small btn-dark disabled"
                                                     *ngIf="!canMoveDown(r, rules_file.rules)"><span
                                                         class="bi bi-chevron-down"></span></a>
 
