--- a/src/app/open/open.component.scss
+++ b/src/app/open/open.component.scss
@@ -5,6 +5,8 @@
         // height: 200px;
         // background: url(/assets/images/logos/main.png) no-repeat center center ;
         // background-size: contain;
+        color: #ddd;
+        text-shadow: 0 4px 4px #000;
     }
 }
 
