--- a/src/app/open/open.component.html
+++ b/src/app/open/open.component.html
@@ -1,7 +1,10 @@
 <div id="open" class="container-fluid mt-4">
     <div class="row justify-content-center">
         <div class="col-sm-6">
-            <div id="logo"></div>
+            <div id="logo" class="text-center mt-4">
+                <h2>ASU SHARES Clinical Decision Support</h2>
+                    <h1> <b>Rule Manager</b></h1>
+            </div>
             <div id="loader" class="">
                 <form class="form">
                     <h1><span class="bi bi-file-earmark"></span> Open a local file
