--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -19,9 +19,9 @@
                     </h1>
                 </div>
 
-                
+
                 <ul class="list-unstyled components">
-                   
+
                     <!-- RULES -->
                     <li>
                         <h4>
@@ -35,21 +35,21 @@
                         <!-- <fieldset class="form-group"> -->
                         <ul class="list-unstyled" id="rules_list">
                             <!-- <li *ngFor="let w of rules_file.rules" (click)="selectRule(w)"> -->
-                            <li *ngFor="let r of rules_file.rules" 
-                                [routerLinkActive]="'active'">
+                            <li *ngFor="let r of rules_file.rules" [routerLinkActive]="'active'">
                                 <div *ngIf="statusService.editing">
                                     <div class="row">
                                         <div class="col-sm-6">
-                                            <input class="form-control form-control-sm" type="text" required="true" [class.selected]="r.id == selectedRuleId()"
-                                                [(ngModel)]="r.id" [routerLink]="['rules', r.id]"/>
+                                            <input class="form-control form-control-sm" type="text" required="true"
+                                                [class.selected]="r.id == selectedRuleId()" [(ngModel)]="r.id"
+                                                [routerLink]="['rules', r.id]" />
 
                                         </div>
                                         <div class="col-sm-6">
                                             <div class="btn-group align-start">
                                                 <a class="btn btn-small btn-default" (click)="deleteRule(r)"><span
                                                         class="bi bi-trash"></span></a>
-                                                <a class="btn btn-small btn-dark-outline" (click)="duplicateRule(r)"><span
-                                                        class="bi bi-files"></span></a>
+                                                <a class="btn btn-small btn-dark-outline"
+                                                    (click)="duplicateRule(r)"><span class="bi bi-files"></span></a>
                                                 <a class="btn btn-small btn-dark-outline"
                                                     (click)="moveUp(r, rules_file.rules)"
                                                     *ngIf="canMoveUp(r, rules_file.rules)"><span
@@ -75,7 +75,9 @@
                                         {{r.id}}
                                     </a>
                                 </div>
-                                <div class="ball ball_green" ><p [innerText]="r.codeSets.length"></p></div>
+                                <div class="ball ball_green">
+                                    <p [innerText]="r.codeSets.length"></p>
+                                </div>
                             </li>
                         </ul>
                     </li>
@@ -110,6 +112,12 @@
                         </button>
 
                     </div>
+                    <br>
+                    <br>
+                    <button *ngIf="statusService.permissions.edit && statusService.editing" id="save_button"
+                        class="btn btn-sm btn-dark" (click)="saveToServer()"><span
+                            class="bi-cloud-upload"></span>&nbsp;Save to Server
+                    </button>
                     <div *ngIf="statusService.permissions.edit">
                         <div class="form-check mt-3 ms-1">
                             <input id="download_editable_switch" class="form-check-input" type="checkbox"
@@ -133,7 +141,8 @@
                     <div *ngIf="!statusService.editing" class="mt-3">
                         Data Updated <b>{{rules_file.updated_at}}</b>
                         <br />
-                        with <a role="link" target="_blank" href="https://www.asushares.com">ASU SHARES</a> Rules Dashboard
+                        with <a role="link" target="_blank" href="https://www.asushares.com">ASU SHARES</a> Rules
+                        Dashboard
                     </div>
                     <br />
                     <br />
@@ -143,8 +152,8 @@
                                 class="bi-folder2-open"></span> Close Rules File..</button>
 
                     </div>
-                    <!-- <button class="btn btn-sm btn-outline-dark float-end" [routerLink]="['/settings']"><span
-                            class="bi bi-gear"></span></button> -->
+                    <button class="btn btn-sm btn-outline-dark float-end" [routerLink]="['/settings']"><span
+                            class="bi bi-gear"></span></button>
 
                 </div>
             </div>
