--- a/src/app/open/open.component.html
+++ b/src/app/open/open.component.html
@@ -3,7 +3,8 @@
         <div class="col-sm-6">
             <div id="logo" class="text-center mt-4">
                 <h2>ASU SHARES Clinical Decision Support</h2>
-                    <h1> <b>Rule Manager</b></h1>
+                    <h1> <b>Rule Manager</b>      &nbsp;               <button class="btn btn-sm btn-outline-dark" [routerLink]="['/settings']"><span
+                        class="bi bi-gear"></span></button></h1>
             </div>
             <div id="loader" class="">
                 <form class="form">
