Toast quirk workarounds

--- a/src/app/rule/rule.component.html
+++ b/src/app/rule/rule.component.html
@@ -254,7 +254,7 @@
                         <tr>
                             <th>System</th>
                             <th>Code</th>
-                            <th>Display</th>
+                            <th>Confidence</th>
                         </tr>
                     </thead>
                     <tbody>
